# windsurf-development-workflow

./: .gitignore  pyproject.toml
deliverables/Researcher/: cycle_1_research_summary.md  cycle_2_research_summary.md  cycle_3_research_summary.md
deliverables/coding/: coder_deliverable.md
deliverables/engineering/: cycle_10_technical_specification.md  cycle_11_technical_specification.md  cycle_12_technical_specification.md  cycle_13_technical_specification.md  cycle_14_technical_specification.md  cycle_15_technical_specification.md  cycle_16_technical_specification.md  cycle_17_technical_specification.md  cycle_18_technical_specification.md  cycle_19_technical_specification.md  cycle_1_technical_specification.md  cycle_20_technical_specification.md  cycle_21_technical_specification.md  cycle_22_technical_specification.md  cycle_23_technical_specification.md  cycle_24_technical_specification.md  cycle_25_technical_specification.md  cycle_26_technical_specification.md  cycle_27_technical_specification.md  cycle_28_technical_specification.md  cycle_2_technical_specification.md  cycle_3_technical_specification.md  cycle_7_technical_specification.md  cycle_9_technical_specification.md
deliverables/research/: cycle_16_research_report.md  (+12 more)
docs/: DW6_ISSUES.md  PROJECT_REQUIREMENTS.md  WORKFLOW_MASTER.md
logs/: .last_commit_sha  workflow_state.txt
src/dw6/: __main__.py  (+10 more)
tests/: conftest.py  test_augmenter.py  test_git_handler.py  test_governor.py  test_main.py  test_mcp_server.py  test_setup.py  test_state_manager.py  test_state_manager_integration.py  test_validator.py
